[metadata]
name = psftools
description = Library of methods to analyse astronomical point spread functions (a.k.a PSFs)
long_description = file: README.md
long_description_content_type = text/markdown
author = Alexandre Boucaud
author_email = aboucaud@apc.in2p3.fr
license = MIT
url = https://github.com/aboucaud/psf_tools
github_project = aboucaud/psf_tools
platforms = any
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy
    Development Status :: 3 - Alpha
project_urls =
    Bug Tracker = https://github.com/aboucaud/psf_tools/issues

[options]
zip_safe = False
include_package_data = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools>=40.0
    wheel
    setuptools_scm
    numpy>=1.19
    Cython<3
install_requires =
    astropy>=4.3
    scipy>1.0
    matplotlib>=3.0

[options.entry_points]
console_scripts =
    make_kernel = psftools.scripts.make_kernel:main
    homogenize = psftools.scripts.homogenize:main

[options.extras_require]
dev =
    pre-commit>=2.17
    pytest>=6.0
    pytest-cov>=3.0
    pytest_astropy_header>=0.2
    mkdocs>=1.2
    mkdocs-material>=8.2
    mkdocstrings>=0.18
    mkdocstrings-python>=0.9
    pytkdocs[numpy-style]>=0.16

[bdist_wheel]
universal = true

[tool:pytest]
minversion = 3.0
norecursedirs = scripts
addopts = --color=yes --verbose
astropy_header = True

[coverage:run]
source = psftools
branch = True

[coverage:report]
show_missing = True
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover
   noqa
   # Don't complain about script hooks
   def main\(.*\):
   if __name__ == .__main__.:

[flake8]
ignore = E501, E203, E731, W503
per-file-ignores = __init__.py:F401,F403
exclude = tests/*, venv/
